<resources>

    <string name="app_name">Loja DevMedia</string>
    <string name="action_settings">Settings</string>
    <string name="txt_btn_enviar">Enviar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="btn_logar">Logar</string>
    <string name="lbl_sair">Sair</string>
    <string name="title_activity_pessoa">PessoaActivity</string>
    <string name="title_activity_lista_pessoa">ListaPessoaActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_editar_pessoa">EditarPessoa</string>

    <!-- FORM DE CADASTRO DE PESSOA !-->
    <string name="txt_nome">Nome: </string>
    <string name="txt_email">Email: </string>
    <string name="txt_minibio">Mini Biografia: </string>

    <!-- TÍTULOS DA NAVEGAÇÃO !-->
    <string name="nav_produtos">Produtos</string>
    <string name="nav_perfi">Perfil</string>
</resources>
